// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 hwgYhi"
    color="primary"
  />
</div>
`;

exports[`Label should render a large one 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 kpHyVp"
    color="primary"
  />
</div>
`;

exports[`Label should render a small one 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 hwgYhi"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 kbDwks"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid and danger 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 gspRXj"
    color="danger"
  />
</div>
`;

exports[`Label should render as solid and default 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 JnfDk"
    color="neutral"
  />
</div>
`;

exports[`Label should render as solid and primary 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 kbDwks"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid and success 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 eLXuCg"
    color="success"
  />
</div>
`;

exports[`Label should render danger color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 dCEjSJ"
    color="danger"
  />
</div>
`;

exports[`Label should render neutral color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 koGEVV"
    color="neutral"
  />
</div>
`;

exports[`Label should render primary color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 hwgYhi"
    color="primary"
  />
</div>
`;

exports[`Label should render success color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 bdvTBm"
    color="success"
  />
</div>
`;

exports[`Label should render warning color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 jdpCfF"
    color="warning"
  />
</div>
`;
